micro-opts: static prefix & emptyList reuse