@@ -8,11 +8,15 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
 
 import javax.annotation.Nonnull;
+import java.util.Collections;
 import java.util.List;
 
 public class ReloadCommand implements CommandExecutor, TabCompleter {
+
     private final AntiSilverFish plugin;
-    private final String permission = "antisilverfish.admin";
+    private static final String permission = "antisilverfish.admin";
+    private static final List<String> reload = Collections.singletonList("reload");
+    private static final String prefix = ChatColor.AQUA + "[" + ChatColor.WHITE + "AntiSilverFish" + ChatColor.AQUA + "] ";
 
     public ReloadCommand(AntiSilverFish plugin) {
         this.plugin = plugin;
@@ -21,17 +25,14 @@ public class ReloadCommand implements CommandExecutor, TabCompleter {
     @Override
     public boolean onCommand(@Nonnull CommandSender sender, @Nonnull Command command, @Nonnull String string, @Nonnull String[] args) {
         if (sender.hasPermission(permission)) {
+
             if (args.length == 0) {
-                sender.sendMessage(
-                        ChatColor.AQUA + "[" + ChatColor.WHITE + "AntiSilverFish" + ChatColor.AQUA + "]"
-                                + ChatColor.WHITE + " Version: "
-                                + ChatColor.AQUA + "v" + plugin.getDescription().getVersion());
+                sender.sendMessage(prefix + ChatColor.WHITE + " Version: " + ChatColor.AQUA + "v" + plugin.getDescription().getVersion());
                 return true;
             }
             if (args[0].equalsIgnoreCase("reload")) {
                 plugin.onReload();
-                sender.sendMessage(ChatColor.AQUA + "[" + ChatColor.WHITE + "AntiSilverFish" + ChatColor.AQUA + "]"
-                        + ChatColor.GREEN + " Config reloaded!");
+                sender.sendMessage(prefix + ChatColor.GREEN + " Config reloaded!");
                 return true;
             }
         }
@@ -40,11 +41,8 @@ public class ReloadCommand implements CommandExecutor, TabCompleter {
 
     @Override
     public List<String> onTabComplete(@Nonnull CommandSender sender,@Nonnull Command command,@Nonnull String string,@Nonnull String[] args) {
-        if (sender.hasPermission(permission)) {
-            if (args.length == 1) {
-                return List.of("reload");
-            }
-        }
-        return List.of();
+        return args.length == 1 && sender.hasPermission(permission)
+        ? reload
+        : Collections.emptyList();
     }
 }
